--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Agents#show</h1>
-<p>Find me in app/views/agents/show.html.erb</p>
+
+
+<%= link_to 'Back To All Agents', agents_path %>
+<%= link_to 'Edit Agent', edit_agent_path(params[:id]) %>
