--- a/app/views/agents/edit.html.erb
+++ b/app/views/agents/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Submit a New Agent</h1>
+<h1>Edit Your Agent Name</h1>
+
 <%= form_for @agent do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name, required: true %>
