everything works now

--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -12,7 +12,7 @@
   <br />
   <%= link_to 'Edit', edit_agent_home_address_path(@agent, @home, @address)%>
   <br />
-  <%= link_to 'Delete', angent_home_address_path(@agent, @home, @address), method: :delete %>
+  <%= link_to 'Delete', agent_home_address_path(@agent, @home, @address), method: :delete %>
 
   <hr />
 <% else %>
