--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,4 +1,4 @@
-<h1>This page loads now <h1>
+<h1>Houses Home Page and Stuff</h1>
 <hr />
 
 <%= link_to 'Edit Home', edit_agent_home_path(@agent, @home) %>
