--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
 <body>
 
 <%= yield %>
-
+<hr />
+<footer>
+	<%= link_to 'Listing Agents', agents_path %> |
+	
+	<%= link_to 'Logout', logout_path %>
+</footer>
 </body>
 </html>
