--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <%= yield %>
 <hr />
-<footer>
+<footer class="footer">
 	<%= link_to 'Listing Agents', agents_path %> |
 	
 	<%= link_to 'Logout', logout_path %>
